force-app/main/default/objects/DER_Default__c/DER_Default__c.object-meta.xml
<CustomObject>
    <description>Sets the default values of DER Applications and Devices</description>
    <label>DER Default</label>
    <nameField>
        <displayFormat>DEF-{0000}</displayFormat>
        <label>DER Default Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DER Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>