force-app/main/default/objects/DER_Default__c/fields/Equip_Non_Inverter__c.field-meta.xml
<CustomField>
    <fullName>Equip_Non_Inverter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Type - Non-Inverter</label>
    <type>Checkbox</type>
</CustomField>