force-app/main/default/objects/DER_Default__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Islandable_Installation__c</fullName>
            </value>
            <value>
                <fullName>Over_Freq_Protection__c</fullName>
            </value>
            <value>
                <fullName>Overvolt_Protection_2__c</fullName>
            </value>
            <value>
                <fullName>Under_Freq_Protection__c</fullName>
            </value>
            <value>
                <fullName>Under_Freq_Protection_Delay__c</fullName>
            </value>
            <value>
                <fullName>Undervolt_Protection__c</fullName>
            </value>
            <value>
                <fullName>Undervolt_Protection_Delay__c</fullName>
            </value>
            <value>
                <fullName>Volt_Vector_Shift__c</fullName>
            </value>
            <value>
                <fullName>DRED_Enabled__c</fullName>
            </value>
            <value>
                <fullName>Non_Inv_Generator_Freq_Response_Mode__c</fullName>
            </value>
            <value>
                <fullName>Non_Inv_Gen_Ramp_Rate__c</fullName>
            </value>
            <value>
                <fullName>Inv_Reactive_Power_Mode__c</fullName>
            </value>
            <value>
                <fullName>Inv_Var_Response_Q_at_V1__c</fullName>
            </value>
            <value>
                <fullName>Inv_Var_Response_Q_at_V2__c</fullName>
            </value>
            <value>
                <fullName>Inv_Var_Response_Q_at_V3__c</fullName>
            </value>
            <value>
                <fullName>Inv_Var_Response_Q_at_V4__c</fullName>
            </value>
            <value>
                <fullName>Inv_Var_Response_V1__c</fullName>
            </value>
            <value>
                <fullName>Inv_Var_Response_V2__c</fullName>
            </value>
            <value>
                <fullName>Inv_Var_Response_V3__c</fullName>
            </value>
            <value>
                <fullName>Inv_Var_Response_V4__c</fullName>
            </value>
            <value>
                <fullName>Inv_Volt_Var_Response_Mode__c</fullName>
            </value>
            <value>
                <fullName>Inv_Volt_Watt_Response_Mode__c</fullName>
            </value>
            <value>
                <fullName>Inv_Watt_Response_P_at_V1__c</fullName>
            </value>
            <value>
                <fullName>Inv_Watt_Response_P_at_V2__c</fullName>
            </value>
            <value>
                <fullName>Inv_Watt_Response_P_at_V3__c</fullName>
            </value>
            <value>
                <fullName>Inv_Watt_Response_P_at_V4__c</fullName>
            </value>
            <value>
                <fullName>Inv_Watt_Response_V1__c</fullName>
            </value>
            <value>
                <fullName>Inv_Watt_Response_V2__c</fullName>
            </value>
            <value>
                <fullName>Inv_Watt_Response_V3__c</fullName>
            </value>
            <value>
                <fullName>Inv_Watt_Response_V4__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>