force-app/main/default/objects/DER_Default__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DER_Application__c</fullName>
            </value>
            <value>
                <fullName>Device__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>