force-app/main/default/objects/DER_Default__c/fields/Offer_MSO__c.field-meta.xml
<CustomField>
    <fullName>Offer_MSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer - MSO</label>
    <type>Checkbox</type>
</CustomField>