force-app/main/default/objects/DER_Default__c/fields/Offer_Neg_0__c.field-meta.xml
<CustomField>
    <fullName>Offer_Neg_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer - Negotiated 0-5</label>
    <type>Checkbox</type>
</CustomField>