force-app/main/default/objects/DER_Default__c/fields/Offer_Neg_5__c.field-meta.xml
<CustomField>
    <fullName>Offer_Neg_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer - Negotiated 5+</label>
    <type>Checkbox</type>
</CustomField>