force-app/main/default/objects/DER_Default__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offer_MSO__c</columns>
    <columns>Offer_Neg_0__c</columns>
    <columns>Offer_Neg_5__c</columns>
    <columns>Equip_Inverter__c</columns>
    <columns>Equip_Non_Inverter__c</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>